styles/globals.css
@import url("https://fonts.googleapis.com/css?family=Lato");
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  color-scheme: light;
}

body {
  @apply bg-white text-neutral-700;
  font-family: 'Lato';
  /* background-image: url('notebook.jpg'); */
}

